force-app/main/default/objects/custom_create366__c/custom_create366__c.object-meta.xml
<CustomObject>
    <label>Custom created object366</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects366</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>