force-app/main/default/objects/custom_create366__c/fields/custom_create_366field502__c.field-meta.xml
<CustomField>
    <fullName>custom_create_366field502__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 366field502</label>
    <type>Checkbox</type>
</CustomField>